jilles      2006/05/01 14:08:00 UTC	(20060501-5139)
  Log:
  Make this look a bit nicer.
  

  Changes:	Modified:
  +16 -12	trunk/src/commandtree.c (File Modified) 


jilles      2006/05/01 13:40:56 UTC	(20060501-5137)
  Log:
  Add void command_help_short(char *mynick, char *origin,
  list_t *commandtree, char *maincmds), like command_help()
  but lists only the commands in maincmds
  ("command1 command2...") verbosely and just shows the
  other command names.
  

  Changes:	Modified:
  +1 -0		trunk/include/commandtree.h (File Modified) 
  +82 -0	trunk/src/commandtree.c (File Modified) 


gxti        2006/05/01 01:03:52 UTC	(20060501-5135)
  Log:
  Remove need for user to be online (especially as their account name) in XMLRPC atheme.channel.topic.set/append
  

  Changes:	Modified:
  +4 -6		trunk/modules/xmlrpc/channel.c (File Modified) 


gxti        2006/05/01 00:55:48 UTC	(20060501-5133)
  Log:
  New XMLRPC method atheme.channel.access.get
  

  Changes:	Modified:
  +1 -0		trunk/contrib/xmlrpc_explorer.php (File Modified) 
  +77 -0	trunk/modules/xmlrpc/channel.c (File Modified) 


jilles      2006/04/29 19:09:24 UTC	(20060429-5131)
  Log:
  Remove unused variable kline_t *k from protocol modules.
  

  Changes:	Modified:
  +0 -1		trunk/protocol/asuka.c (File Modified) 
  +0 -1		trunk/protocol/bahamut.c (File Modified) 
  +0 -1		trunk/protocol/bircd.c (File Modified) 
  +0 -2		trunk/protocol/charybdis.c (File Modified) 
  +0 -1		trunk/protocol/dreamforge.c (File Modified) 
  +0 -2		trunk/protocol/hybrid.c (File Modified) 
  +0 -1		trunk/protocol/hyperion.c (File Modified) 
  +0 -1		trunk/protocol/inspircd.c (File Modified) 
  +0 -1		trunk/protocol/ircnet.c (File Modified) 
  +0 -1		trunk/protocol/monkey.c (File Modified) 
  +0 -1		trunk/protocol/nefarious.c (File Modified) 
  +0 -1		trunk/protocol/plexus.c (File Modified) 
  +0 -1		trunk/protocol/ptlink.c (File Modified) 
  +0 -2		trunk/protocol/ratbox.c (File Modified) 